--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-responsive-masonry": "^2.2.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
