--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ionic/react": "^8.2.6",
+    "axios": "^1.7.3",
     "ionicons": "^7.4.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
