--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ionic/react": "^8.2.6",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.3",
     "ionicons": "^7.4.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
+    "react-quill": "^2.0.0",
     "react-responsive-masonry": "^2.2.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
