--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.3",
     "ionicons": "^7.4.0",
+    "quill": "^2.0.2",
+    "quill-table": "^1.0.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
